fix(slider): no bullets on mobile view

--- a/template/scss/components/molecules/_banner-slider.scss
+++ b/template/scss/components/molecules/_banner-slider.scss
@@ -4,6 +4,12 @@
   max-width: 80rem;
   margin: 0 auto;
 
+  @media (max-width: 575.98px) {
+    &__bullets {
+      display: none;
+    }
+  }
+
   &__slides,
   &__slides > li {
     overflow: hidden;
